deploy/network-policy/redis/allow-all-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-for-selected-pods-redis
  namespace: dev-redis
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dev-redis-cluster
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}
