deploy/network-policy/redis/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: dev-redis
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
